Ensure scroll-list loading animation visibility

--- a/web/system/skin/htmlpage.css
+++ b/web/system/skin/htmlpage.css
@@ -11,4 +11,5 @@
 	background-position: center;
 	background-repeat: no-repeat;
 	height: 32px;
+	clear: both;
 }
